Custom Video Player

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.12.2",
     "react-linkify": "^1.0.0-alpha",
     "react-moment": "^1.1.2",
+    "react-player": "^2.11.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
