--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-full-screen": "^1.1.1",
     "react-ga4": "^1.4.1",
     "react-hook-form": "^7.12.2",
     "react-linkify": "^1.0.0-alpha",
@@ -43,6 +44,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.4.0",
+    "react-slider": "^2.0.4",
     "react-test-renderer": "^18.1.0",
     "react-toastify": "7.0.3",
     "redux": "^4.2.0",
