--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
     "chartjs-plugin-datalabels": "^2.1.0",
+    "country-state-city": "^3.1.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "env-cmd": "^10.1.0",
@@ -39,6 +40,9 @@
     "react-hook-form": "^7.12.2",
     "react-linkify": "^1.0.0-alpha",
     "react-moment": "^1.1.2",
+    "react-phone-code": "^0.0.4",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.11",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
