--- a/.env.development
+++ b/.env.development
@@ -9,7 +9,7 @@ REACT_APP_OKTA_URL="https://dev-9692570.okta.com/oauth2/aus5a13jo28j1b6M45d7/v1/
 REACT_APP_OKTA_URL_CLIENT_ID="0oa5a0ijg8ZphFoYk5d7"
 REACT_APP_GOOGLE_IDP="0oa5aou88y8ybNeh65d7"
 REACT_APP_MICROSOFT_IDP="0oa5bil0wklCyIlsi5d7"
-REACT_APP_SOCIAL_LOGIN_REDIRECT_URL="https://stage.signetremotesmart.com"
+REACT_APP_SOCIAL_LOGIN_REDIRECT_URL="http://localhost:3000"
 REACT_APP_BRANCH_IO="https://signet.test-app.link/"
 REACT_APP_FIREBASE_API_KEY="AIzaSyCREf4IiDN3fFrc0j-uhEXQ6TqgBT7Ag3M"
 REACT_APP_FIREBASE_MEASUREMENT_ID="G-HZQ2DG9RZK"
