view ticket page

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_ENV=local
-REACT_APP_PUBLIC_URL="https://stage.signetremotesmart.com/"
-REACT_APP_API_BASE_URL="https://stage-api.signetremotesmart.com"
+REACT_APP_PUBLIC_URL="https://uat.signetremotesmart.com/"
+REACT_APP_API_BASE_URL="https://uat-api.signetremotesmart.com"
 REACT_APP_NON_REMOTE_SMARTUSER="00g5a0qok8hx6DJcX5d7"
 REACT_APP_REMOTE_SMARTUSER="00g5a0nhwgmLypmoy5d7"
 REACT_APP_SIGNET_ADMIN="00g5a0q59kk1iTOlH5d7"
