--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_ENV=local
 REACT_APP_PUBLIC_URL="https://uat.signetremotesmart.com/"
 REACT_APP_API_BASE_URL="https://uat-api.signetremotesmart.com"
-REACT_APP_NON_REMOTE_SMARTUSER="00g5a0qok8hx6DJcX5d7"
-REACT_APP_REMOTE_SMARTUSER="00g5a0nhwgmLypmoy5d7"
-REACT_APP_SIGNET_ADMIN="00g5a0q59kk1iTOlH5d7"
+REACT_APP_NON_REMOTE_SMARTUSER="rol_Gmix20FM3qO2AMrO"
+REACT_APP_REMOTE_SMARTUSER="rol_aJut9ao56uh1i7dw"
+REACT_APP_SIGNET_ADMIN="rol_vDsnmnxt2EQzcM4z"
 REACT_APP_OKTA_URL="https://dev-9692570.okta.com/oauth2/aus5a13jo28j1b6M45d7/v1/authorize?idp="
 REACT_APP_OKTA_URL_CLIENT_ID="0oa5a0ijg8ZphFoYk5d7"
 REACT_APP_GOOGLE_IDP="0oa5aou88y8ybNeh65d7"
